Update: layout index.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<section>
-  <header>
-    <h1>Mad Libs!</h1>
-    <p class="description">Mad Libs is 's werelds beste woordspel - en kan van iedereen de grappigste persoon in de kamer maken! Mad Libs zijn verhalen waarin woorden zijn verwijderd en vervangen door lege spaties. Eén speler fungeert als de "lezer" en vraagt de andere spelers, die het verhaal niet hebben gezien, om de lege plekken in te vullen met bijvoeglijke naamwoorden, zelfstandige naamwoorden, uitroepen, kleuren, bijvoeglijke naamwoorden en meer. Deze woorden worden ingevoegd in de lege plekken en vervolgens wordt het verhaal hardop voorgelezen met hilarische resultaten. Er zijn geen winnaars of verliezers, alleen gelach. Mad Libs Live! brengt dit eenvoudige spel naar het muzikale podium met een script en liedjes vol lege plekken die worden ingevuld door toeschouwers en een aanstekelijke popscore. Mad Libs Live! omarmt volledig de geest van het "World's Greatest Word Game" en is de perfecte musical voor publiek vanaf 7 jaar dat wil stoppen met serieus te zijn en goofy wil worden!</p>
-  </header>
-</section>
+<div class="container">
+  <section>
+    <header>
+      <h1 class="text-center">Mad Libs!</h1>
+      <p class="description">Mad Libs is 's werelds beste woordspel - en kan van iedereen de grappigste persoon in de kamer maken! Mad Libs zijn verhalen waarin woorden zijn verwijderd en vervangen door lege spaties. Eén speler fungeert als de "lezer" en vraagt de andere spelers, die het verhaal niet hebben gezien, om de lege plekken in te vullen met bijvoeglijke naamwoorden, zelfstandige naamwoorden, uitroepen, kleuren, bijvoeglijke naamwoorden en meer. Deze woorden worden ingevoegd in de lege plekken en vervolgens wordt het verhaal hardop voorgelezen met hilarische resultaten. Er zijn geen winnaars of verliezers, alleen gelach. Mad Libs Live! brengt dit eenvoudige spel naar het muzikale podium met een script en liedjes vol lege plekken die worden ingevuld door toeschouwers en een aanstekelijke popscore. Mad Libs Live! omarmt volledig de geest van het "World's Greatest Word Game" en is de perfecte musical voor publiek vanaf 7 jaar dat wil stoppen met serieus te zijn en goofy wil worden!</p>
+    </header>
+  </section>
+</div>
