--- a/src/app/view/game.component.html
+++ b/src/app/view/game.component.html
@@ -7,18 +7,31 @@
 <p>
     <mat-card>
         <div class="row">
-            <div class="col-3"><mat-progress-bar mode="determinate" value="{{timePercent}}"></mat-progress-bar></div>
-            <div class="col-6"></div>
-            <div class="col-3">
+            <div class="col-sm-12 col-md-12 col-lg-9 col-xl-9 pb-2">
+                <span class="material-icons">timer</span><mat-progress-bar mode="determinate" value="{{timePercent}}"></mat-progress-bar>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-3 col-xl-3">
                 <button mat-stroked-button style="margin-right:5px" (click)="onQuit()">Quit</button>
                 <button mat-flat-button disabled><span style="color:white; align-items: center; font-size: x-large;">{{formData.sessieid}}</span></button>
             </div>
         </div>
-        <hr/>
-        <div class="row">
-            <div class="col-12">Click the options below to select a set of answers to be added to your mad lib. Before each list of options you will see the category to which they belong. Once you're done, simply click on the create button!</div>
+        <div class="row py-4">
+            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                <mat-expansion-panel>
+                    <mat-expansion-panel-header style="text-align: center;">
+                        <mat-panel-description>
+                            Click here for a refresher!
+                        </mat-panel-description>
+                    </mat-expansion-panel-header>
+                    <p><b>See those options?</b> Click those to get your mad lib built! The words are introduced by a category, so you know just what you're picking.</p>
+                    <p><b>See that timer?</b> When that runs out, you may no longer submit an answer, and blanks will be submitted where you failed to choose. Don't run out!</p>
+                    <p><b>The big number?</b> That's the session id! If you have friends around, tell them to join that session. You can play with up to 6 people!</p>
+                    <p><b>Shuffle?</b> Hate the words you're seeing? Click shuffle to get a new set of words!</p>
+                    <p><b>Report?</b> Really hate the words you're seeing? You may click report to report them to us and we'll make sure you won't see them again in this session. Additionally, words that are repeatedly reported will be removed from the service.</p>
+                    <p>What are you waiting for? Go play!</p>
+                </mat-expansion-panel>
+            </div>
         </div>
-        <hr/>
         <div class="row">
             <div class="col-1">
                 <div *ngFor="let key of formDataKeys"><p><span matBadge="{{formData[key.score] || ''}}" matBadgePosition="before" matBadgeOverlap="false">{{formData[key.name] || ''}}</span></p></div>
@@ -34,12 +47,19 @@
                 </div>
             </div>
             <div class="col-1">
-                SHUFFLE AND REPORT
+                <p><button mat-mini-fab color="accent">
+                    <span class="material-icons">cached</span>
+                </button></p>
+                <p><button mat-mini-fab color="accent">
+                    <span class="material-icons">sms_failed</span>
+                </button></p>
             </div>
         </div>
         <hr/>
         <div class="row">
-            <div class="col-12">CREATE BUTTON</div>
+            <div class="col-12">
+                <button mat-raised-button color="primary" class="w-100">Create</button>
+            </div>
         </div>
 </mat-card>
 </p>
