--- a/src/app/view/home.component.html
+++ b/src/app/view/home.component.html
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-    <mat-expansion-panel hideToggle>
+    <mat-expansion-panel>
         <mat-expansion-panel-header style="text-align: center;">
             <mat-panel-title style="font-size: x-large">
                 <b>Welcome!</b>
