--- a/src/app/view/loginForm.component.html
+++ b/src/app/view/loginForm.component.html
@@ -13,7 +13,7 @@
             <p>
                 <mat-form-field appearance="fill" class="loginInput">
                     <mat-label>Enter a session ID if you're playing with friends</mat-label>
-                    <input matInput #input maxlength="5" formControlName="sessieid">
+                    <input matInput maxlength="5" formControlName="sessieid">
                     <mat-hint>Feel free to leave this blank to start a new session.</mat-hint>
                 </mat-form-field>
             </p>
