Add footer text
Footer text is stored in store 'final' so it can be accessed throughout.
Change only needs to happen in one place to change it throughout the app.

--- a/src/app/view/game.component.html
+++ b/src/app/view/game.component.html
@@ -79,5 +79,8 @@
                 <button mat-raised-button color="primary" class="w-100">{{endButtonText}}</button>
             </div>
         </div>
-</mat-card>
+        <mat-card-footer>
+            <sub>{{footer_message}}</sub>
+        </mat-card-footer>
+    </mat-card>
 </p>
