--- a/src/app/view/loginForm.component.html
+++ b/src/app/view/loginForm.component.html
@@ -23,6 +23,6 @@
         </mat-card-actions>
     </form>
     <mat-card-footer>
-        <sub>Project conceived of and created by the Madder Libs team, Avans University of Applied Science, 2022.</sub>
+        <sub>{{footer_message}}</sub>
     </mat-card-footer>
 </mat-card>
