--- a/src/styles.css
+++ b/src/styles.css
@@ -1,52 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
-@import url('https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
-
-/* Margins for different screens. */
-@media all and (min-width: 1008px) {
-    body {
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-}
-
-@media all and (min-width: 641px) and (max-width: 1007px) {
-    body {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-}
-
-@media all and (max-width: 640px) {
-    body {
-        margin-left: 1%;
-        margin-right: 1%;
-    }
-}
-
-/* Common css rules */
-html, body { 
-    height: 100%;
-    background-color: #cccccc;
-}
-
-body { 
-    font-family: Roboto, "Helvetica Neue", sans-serif;
-    text-align: center;
-}
-
-button {
-    white-space: pre-wrap;
-}
-
-/* Specific css classes */
-.loginInput {
-    min-width: 100%;
-}
-
-.button-row {
-    padding:0;
-    margin:0;
-    float: left;
+.btn {
+  cursor: pointer;
 }
