--- a/src/app/view/loginForm.component.html
+++ b/src/app/view/loginForm.component.html
@@ -1,3 +1,4 @@
+<!-- The card that holds the login form. Does some validation from here. -->
 <mat-card>
     <mat-card-title>The story begins...</mat-card-title>
     <mat-card-subtitle>But first...</mat-card-subtitle>
