--- a/src/app/view/home.component.html
+++ b/src/app/view/home.component.html
@@ -1,9 +1,9 @@
+<!-- The title toolbar. -->
 <p>
-    <mat-toolbar color="primary">
-        <span>Madder Libs</span>
-    </mat-toolbar>
+    <titleheader></titleheader>
 </p>
 
+<!-- The game explanation panel. Can extend when clicked upon. -->
 <p>
     <mat-expansion-panel>
         <mat-expansion-panel-header style="text-align: center;">
@@ -20,6 +20,7 @@
     </mat-expansion-panel>
 </p>
 
+<!-- A link to the loginform component. -->
 <p>
     <loginForm></loginForm>
 </p>
