--- a/src/app/view/settimerdialog.component.html
+++ b/src/app/view/settimerdialog.component.html
@@ -3,10 +3,12 @@
 <div mat-dialog-content>
   <p>This will prevent your rounds from lasting forever. If you set a timer, the round will automatically end when the timer runs out. Beware not to set this too low though! If you do not want to play with a timer, you may set this to 0 seconds.</p>
   
+  <p>Please be aware that only the first timer set for a session will be kept into account. All subsequent timers will be summarily ignored.</p>
+  
   <mat-slider matInput #slider min="0" max="300" step="1" value="{{formTimeLimit}}"></mat-slider>
   <mat-hint>Current setting: {{slider.value}} seconds.</mat-hint>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onDialogCancel()">No Thanks</button>
-  <button mat-button (click)="onDialogConfirm(slider.value)" cdkFocusInitial>Sure</button>
+  <button mat-button (click)="onDialogConfirm(slider.value)" cdkFocusInitial>Set my timer</button>
 </div>
