--- a/src/app/view/game.component.html
+++ b/src/app/view/game.component.html
@@ -28,7 +28,7 @@
                     <p><b>See those options?</b> Click those to get your mad lib built! The words are introduced by a category, so you know just what you're picking.</p>
                     <p><b>See that timer?</b> When that runs out, you may no longer submit an answer, and blanks will be submitted where you failed to choose. Don't run out!</p>
                     <p><b>The big number?</b> That's the session id! If you have friends around, tell them to join that session. You can play with up to 6 people!</p>
-                    <p><b>Shuffle?</b> Hate the words you're seeing? Click shuffle to get a new set of words!</p>
+                    <p><b>Shuffle?</b> Hate the words you're seeing? Click shuffle to get a new set of words! Be warned though, you will pay a score cost to shuffle the words and the cost increases with each click...</p>
                     <p><b>Report?</b> Really hate the words you're seeing? You may click report to report them to us and we'll make sure you won't see them again in this session. Additionally, words that are repeatedly reported will be removed from the service.</p>
                     <p>What are you waiting for? Go play!</p>
                 </mat-expansion-panel>
