--- a/src/app/view/waitingdialog.component.html
+++ b/src/app/view/waitingdialog.component.html
@@ -1,5 +1,5 @@
 <!-- This component holds waiting for something dialog. -->
-<h1 mat-dialog-title>Waiting for {{reason}}...</h1>
+<h1 mat-dialog-title>{{reason}}...</h1>
 <div mat-dialog-content class="row">
   <div class="col-12">
     <mat-spinner style="margin:0 auto;"></mat-spinner>
